--- a/devicehost/devicehost.vcxproj.filters
+++ b/devicehost/devicehost.vcxproj.filters
@@ -73,24 +73,6 @@
     <Filter Include="Source Files\Scaler\FFmpeg">
       <UniqueIdentifier>{0014be48-93c9-411e-8d34-e001f18a13ae}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Decoder\File">
-      <UniqueIdentifier>{8714b7f0-8dd3-4f52-bc7e-41332c3667a4}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Decoder\File">
-      <UniqueIdentifier>{534b1b0a-2c34-4720-bb25-582d0246d4d3}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Decoder\FFmpeg">
-      <UniqueIdentifier>{bff679c7-32a8-4233-b921-7f993620ed15}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Decoder\FFmpeg">
-      <UniqueIdentifier>{7a0cfc2b-df5e-47ff-9ca2-4afc661a229a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Renderer">
-      <UniqueIdentifier>{a4ab95ea-0db8-4f69-8283-e5043e76f225}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Renderer">
-      <UniqueIdentifier>{a29251ba-83f2-43b7-8d89-76ce68c55060}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\Device\Hikvision">
       <UniqueIdentifier>{91ebe1dc-17d0-4dc9-b8cc-e1b9b2051aa3}</UniqueIdentifier>
     </Filter>
@@ -510,21 +492,6 @@
     <ClCompile Include="..\source\MediaScaler\FrameScaler.cpp">
       <Filter>Source Files\Scaler</Filter>
     </ClCompile>
-    <ClCompile Include="..\source\MediaDecoder\FFmpeg\FFmpegDecoder.cpp">
-      <Filter>Source Files\Decoder\FFmpeg</Filter>
-    </ClCompile>
-    <ClCompile Include="..\source\MediaDecoder\FFmpeg\FFmpegFileDecoder.cpp">
-      <Filter>Source Files\Decoder\FFmpeg</Filter>
-    </ClCompile>
-    <ClCompile Include="..\source\MediaDecoder\FFmpeg\FFmpegFrameDecoder.cpp">
-      <Filter>Source Files\Decoder\FFmpeg</Filter>
-    </ClCompile>
-    <ClCompile Include="..\source\MediaRenderer\MediaRenderer.cpp">
-      <Filter>Source Files\Renderer</Filter>
-    </ClCompile>
-    <ClCompile Include="..\source\MediaRenderer\SDLRenderer.cpp">
-      <Filter>Source Files\Renderer</Filter>
-    </ClCompile>
     <ClCompile Include="AlarmMessage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -570,9 +537,6 @@
     <ClCompile Include="DigitCameraLivestream.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\source\Device\HikvisionDevice.cpp">
-      <Filter>Source Files\Device</Filter>
-    </ClCompile>
     <ClCompile Include="..\source\Stream\AVStream.cpp">
       <Filter>Source Files\Stream</Filter>
     </ClCompile>
@@ -599,6 +563,9 @@
     </ClCompile>
     <ClCompile Include="..\boost_1_67_0\libs\thread\src\win32\tss_pe.cpp">
       <Filter>Source Files\boost\thread</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\Device\Hikvision\HikvisionDevice.cpp">
+      <Filter>Source Files\Device\Hikvision</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1106,23 +1073,8 @@
     <ClInclude Include="..\include\MediaScaler\FrameScaler.h">
       <Filter>Header Files\Scaler</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\MediaDecoder\FFmpeg\FFmpegDecoder.h">
-      <Filter>Header Files\Decoder\FFmpeg</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\MediaDecoder\FFmpeg\FFmpegFileDecoder.h">
-      <Filter>Header Files\Decoder\FFmpeg</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\MediaDecoder\FFmpeg\FFmpegFrameDecoder.h">
-      <Filter>Header Files\Decoder\FFmpeg</Filter>
-    </ClInclude>
     <ClInclude Include="..\include\Device\Configing.h">
       <Filter>Header Files\Device</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\MediaRenderer\MediaRenderer.h">
-      <Filter>Header Files\Renderer</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\MediaRenderer\SDLRenderer.h">
-      <Filter>Header Files\Renderer</Filter>
     </ClInclude>
     <ClInclude Include="AlarmMessage.h">
       <Filter>Header Files</Filter>
@@ -1145,9 +1097,6 @@
     <ClInclude Include="DigitCameraLivestream.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\Device\HikvisionDevice.h">
-      <Filter>Header Files\Device</Filter>
-    </ClInclude>
     <ClInclude Include="..\include\Stream\AVStream.h">
       <Filter>Header Files\Stream</Filter>
     </ClInclude>
@@ -1162,6 +1111,9 @@
     </ClInclude>
     <ClInclude Include="BGR24FrameCache.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Device\Hikvision\HikvisionDevice.h">
+      <Filter>Header Files\Device\Hikvision</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
