--- a/devicehost/devicehost.vcxproj.filters
+++ b/devicehost/devicehost.vcxproj.filters
@@ -133,6 +133,12 @@
     <Filter Include="Source Files\MQModule\Router">
       <UniqueIdentifier>{8a3b81d2-7a99-440f-8bbe-b7e6e25d079f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\MQModel\Transfer">
+      <UniqueIdentifier>{e83a3e20-4ba8-4e78-a401-826d086dcce5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\MQModule\Transfer">
+      <UniqueIdentifier>{ab3575f8-e793-4409-8546-be1b6e013f04}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\source\Device\Device.cpp">
@@ -593,6 +599,12 @@
     </ClCompile>
     <ClCompile Include="..\source\MQModel\Publisher\PublisherModel.cpp">
       <Filter>Source Files\MQModule\Publisher</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\MQModel\Transfer\TransferModel.cpp">
+      <Filter>Source Files\MQModule\Transfer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\MessageQueue\MQTransfer.cpp">
+      <Filter>Source Files\MQ</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1156,6 +1168,12 @@
     </ClInclude>
     <ClInclude Include="..\include\MQModel\Publisher\PublisherModel.h">
       <Filter>Header Files\MQModel\Publisher</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\MQModel\Transfer\TransferModel.h">
+      <Filter>Header Files\MQModel\Transfer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\MessageQueue\MQTransfer.h">
+      <Filter>Header Files\MQ</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
