--- a/demo/demo.vcxproj
+++ b/demo/demo.vcxproj
@@ -221,12 +221,16 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="simpleD3D11Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="demo.rc" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\demo.rc2" />
+    <None Include="texture_2d.cu" />
+    <None Include="texture_3d.cu" />
+    <None Include="texture_cube.cu" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\demo.ico" />
