--- a/devicehost/devicehost.vcxproj
+++ b/devicehost/devicehost.vcxproj
@@ -353,11 +353,11 @@
     <ClInclude Include="..\include\Arithmetic\CVAlgoPhone.h" />
     <ClInclude Include="..\include\Arithmetic\CVAlgoSleep.h" />
     <ClInclude Include="..\include\DataStruct\FIFOQueue.h" />
-    <ClInclude Include="..\include\Device\Configing.h" />
     <ClInclude Include="..\include\Device\Device.h" />
+    <ClInclude Include="..\include\Device\EnableDeviceConfig.h" />
+    <ClInclude Include="..\include\Device\EnableDeviceLoginAndLogout.h" />
     <ClInclude Include="..\include\Device\Hikvision\HikvisionDevice.h" />
     <ClInclude Include="..\include\Device\Hikvision\HikvisionNVR.h" />
-    <ClInclude Include="..\include\Device\Logging.h" />
     <ClInclude Include="..\include\error.h" />
     <ClInclude Include="..\include\File\Com\ComPort.h" />
     <ClInclude Include="..\include\Hardware\Cpu.h" />
@@ -381,6 +381,7 @@
     <ClInclude Include="..\include\MQModel\Worker\WorkerModel.h" />
     <ClInclude Include="..\include\predef.h" />
     <ClInclude Include="..\include\Stream\AVStream.h" />
+    <ClInclude Include="..\include\Stream\EnablePictureCapture.h" />
     <ClInclude Include="..\include\Stream\Hikvision\HikvisionLivestream.h" />
     <ClInclude Include="..\include\Stream\Livestream.h" />
     <ClInclude Include="..\include\Time\Time.h" />
