--- a/demo/demo.vcxproj
+++ b/demo/demo.vcxproj
@@ -100,7 +100,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalLibraryDirectories>$(SolutionDir)lib\CUDA-9.0.20\Lib\x64;$(SolutionDir)lib\ffmpeg-4.1.4\x64;$(CudaToolkitLibDir)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(CudaToolkitLibDir);$(SolutionDir)lib\CUDA-9.0.20\Lib\x64;$(SolutionDir)lib\ffmpeg-4.1.4\x64</AdditionalLibraryDirectories>
       <AdditionalDependencies>DXGI.lib;nvcuvid.lib;cuda.lib;cudart_static.lib;d3d11.lib;d3dcompiler.lib;swscale.lib;avcodec.lib;avdevice.lib;avfilter.lib;avformat.lib;avutil.lib</AdditionalDependencies>
       <LinkTimeCodeGeneration>Default</LinkTimeCodeGeneration>
     </Link>
@@ -117,6 +117,8 @@
     <CudaCompile>
       <TargetMachinePlatform>64</TargetMachinePlatform>
       <CodeGeneration>compute_30,sm_30;compute_35,sm_35;compute_37,sm_37;compute_50,sm_50;compute_52,sm_52;compute_60,sm_60;compute_61,sm_61;compute_70,sm_70;compute_75,sm_75;</CodeGeneration>
+      <Defines>WIN32</Defines>
+      <Runtime>MTd</Runtime>
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
